# tools

./: components.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: publish.yaml
scripts/: updateLatest.mjs  updateVersion.mjs  updater.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/service/: hosts.rs  lingkechaci.rs  mod.rs  siliconflow.rs
src-tauri/src/store/: config.rs
src-tauri/src/utils/: mod.rs  system.rs  tarnslate.rs  translate.rs  window.rs
src/@types/: command.d.ts  setting.d.ts
src/assets/style/: tailwind.css
src/components/: dialog.tsx  mode-toggle.tsx  navSideBar.tsx  titlebar.tsx
src/components/setting/: ai.tsx  default.tsx  lingkechaci.tsx  updateBar.tsx
src/pages/: home.tsx  settings.tsx
src/pages/lingkechaci/: webview.tsx
src/pages/tools/: chaci.tsx  hosts.tsx  index.tsx  translate.tsx
src/pages/tools/system/: hosts.tsx
src/utils/: setting.ts  updater.ts  webview.ts
