[package]
name = "Tools"
version = "0.0.5"
description = "Byron's Tools"
authors = ["byron"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes="0.11"

reqwest = {version="0.12", features= ["json", "cookies"] }
aes = "0.7"
block-modes = "0.8"
block-padding = "0.2"
rand = "0.8"
hex = "0.4"
base64 = "0.13"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
reqwest-streams = { version = "0.9.0", features = ["json"] }
futures-util = "0.3.31"
winapi = { version = "0.3.9", features = ["securitybaseapi"] }
service-manager = "0.7.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
